update swagger document
